apps/base/commafeed/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commafeed
spec:
  replicas: 1
  selector:
    matchLabels:
      app: commafeed

  template:
    metadata:
      labels:
        app: commafeed
    spec:
      # Node affinity no longer needed - NFS storage can move with pods
      containers:
        - name: commafeed
          image: athou/commafeed:5.11.1-h2
          securityContext:
            allowPrivilegeEscalation: false
          # envFrom:
          #   - configMapRef:
          #       name: commafeed-configmap
          #   - secretRef:
          #       name: commafeed-container-env
          ports:
            - containerPort: 8082
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 1000m
              memory: 256Mi
          volumeMounts:
            - name: data-volume
              mountPath: /commafeed/data
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: commafeed-data
      restartPolicy: Always
