apps/base/commafeed/networking.yaml
apiVersion: v1
kind: Service
metadata:
  name: commafeed
spec:
  ports:
    - port: 8082
  selector:
    app: commafeed
  type: ClusterIP
