apps/base/commafeed/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: commafeed-svc
spec:
  ports:
    - port: 8082
  selector:
    app: commafeed-svc
  type: ClusterIP
