apps/base/commafeed/ingress-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: commafeed-ingress
  namespace: commafeed
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: commafeed-svc
      port:
        number: 8082
  tls:
    - hosts:
        - commafeed.lab.biodrone.xyz
