apps/base/commafeed/ingressroute-traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: commafeed-ingressroute
  namespace: commafeed
  annotations:
    external-dns.alpha.kubernetes.io/target: 10.0.10.21
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`commafeed.lab.biodrone.xyz`)
      kind: Rule
      services:
        - name: commafeed-svc
          port: 8082
  tls:
    secretName: commafeed-certificate-production
