apps/base/commafeed/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: commafeed-ingressroute
  namespace: commafeed
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`commafeed.lab.biodrone.xyz`)
      kind: Rule
      services:
        - name: commafeed
          port: 8082
  tls:
    secretName: commafeed-certificate-production
